--- a/src/components/DataRow/style.css
+++ b/src/components/DataRow/style.css
@@ -1,7 +1,17 @@
-.image__td {
-  width: 30%;
+.row__image {
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
-td:last-child {
-  padding-left: 4rem;
+.row__info {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-left: 2rem;
+}
+
+.row__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
